<resources>
    <string name="app_name">MealApp</string>
    <string name="forgetpasswod">Did you forget the password?</string>
    <string name="donothavaaccount">Don\'t have an account?</string>
    <string name="Createanewaccount">Create a new account</string>
    <string name="Welcome">Welcome</string>
    <string name="Signin">Sign in</string>
    <string name="EnterYourName">EnterYourName</string>
    <string name="EnterYourEmail">Enter Your Email</string>
    <string name="EnteryourPassword">Enter Your Password</string>
    <string name="SignUp">SignUp</string>
    <string name="SignIn">Sign in</string>
    <string name="DoYouhaveAnAccout">Do You have An Accout</string>

    <string name="facebook_app_id">776491347287224</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">beb73a5f381ac5cf419dd0855ac09586</string>
    <string name="remeberme">Remember ME</string>
    <string name="searchbymeals">meals</string>
    <string name="foodapp">Your Application Food</string>
    <string name="searchc">search based country</string>
    <string name="searchbasedcat">Search Based Category</string>
    <string name="searchbaseding">Search Based ingredient</string>
    <string name="categories">Categories</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="getinspired">Get inspired</string>
    <string name="name">Name</string>
    <string name="ingreidient">Ingredient</string>
    <string name="instruction">Instruction</string>
    <string name="catagory">Catagory</string>
    <string name="area">Area</string>
    <string name="addtocaleander">Add to Caleander</string>
    <string name="addtofav">Add to Favourite</string>
    <string name="removefromfav">Remove From FAVOURITE</string>
    <string name="deletefromfav">Delete From Favourite</string>
    <string name="deletefromcal">Delete From Calander</string>
    <string name="addtocal">Add to Calander</string>
    <string name="removeformcal">Remove From Calander</string>


</resources>