<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.Home.View.Home" >

    <ProgressBar
        android:id="@+id/prograssbarHome"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="414dp"
        android:layout_height="124dp"
        android:layout_marginBottom="250dp"
        android:backgroundTint="#000000"
        android:progressTint="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout

            android:id="@+id/linerfragmenthome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/getinspired"
                android:textColor="#070707"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/meal_image"
                android:layout_width="match_parent"
                android:layout_height="352dp"
                android:adjustViewBounds="true"
                android:scaleType="matrix" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/chango"
                android:text="@string/name"
                android:textColor="#0C0C0C"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/meal_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"


                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/chango"
                android:text="@string/catagory"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/meal_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"


                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/chango"
                android:text="@string/area"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/meal_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="MealArea"

                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/chango"
                android:text="@string/ingreidient"
                android:textColor="#1E1E1E"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/meal_ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="Meal Ingredients"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/meal_instructions_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="Instructions"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/meal_instructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Meal Instructions"

                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/meal_youtube_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="Watch on YouTube"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/meal_youtube_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"

                android:text="Meal YouTube Link"
                android:textColor="#000000"
                android:textColorLink="@color/teal_700"
                android:textSize="16sp" />

            <VideoView
                android:id="@+id/video_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/addtofavviewmealh"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/addtofav" />

                <Button
                    android:id="@+id/removefromfavmealviewh"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="40dp"
                    android:text="@string/removefromfav" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/addtocalander"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/addtocal" />

                <Button
                    android:id="@+id/removefromcalander"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="40dp"
                    android:text="@string/removeformcal" />
            </LinearLayout>



        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>