<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/category_card_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">


    <ScrollView
        android:layout_width="394dp"
        android:layout_height="594dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/layoutcata"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/photofav"
                android:layout_width="match_parent"
                android:layout_height="213dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewfav"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/chango"
                    android:text="@string/name"
                    android:textColor="#0C0C0C"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/meal_namedetfav"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"


                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/chango"
                    android:text="@string/catagory"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/meal_categorydetfav"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"


                    android:textColor="#000000"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/chango"
                    android:text="@string/area"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/meal_areadetfav"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="MealArea"

                    android:textColor="#000000"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/chango"
                    android:text="@string/ingreidient"
                    android:textColor="#1E1E1E"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/meal_ingredientsdetfav"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:text="Meal Ingredients"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/meal_instructions_titledetfav"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:text="Instructions"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/meal_instructionsdetfav"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Meal Instructions"

                    android:textColor="#000000"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/meal_youtube_titledetfav"
                    android:layout_width="372dp"
                    android:layout_height="73dp"

                    android:text="Watch on YouTube"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/meal_youtube_linkdetfav"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoLink="web"

                    android:text="Meal YouTube Link"
                    android:textColor="#000000"
                    android:textColorLink="@color/teal_700"
                    android:textSize="16sp" />

                <VideoView
                    android:id="@+id/video_viewdetfav"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <Button
                    android:id="@+id/deletefromfav"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/deletefromfav" />


            </LinearLayout>

        </LinearLayout>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>