<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sign.SignUp">


    <ImageView
        android:id="@+id/logo_tv"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@null"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/foodicon" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="16dp"
        android:id="@+id/name_input_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:boxBackgroundColor="@android:color/white"
        app:boxBackgroundMode="outline"
        app:layout_constraintLeft_toLeftOf="@id/logo_tv"
        app:layout_constraintRight_toRightOf="@id/logo_tv"
        app:layout_constraintTop_toBottomOf="@id/logo_tv">

        <EditText
            android:id="@+id/nameTxtfield"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/EnterYourName"
            android:inputType="textPersonName"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_input_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:boxBackgroundColor="@android:color/white"
        app:boxBackgroundMode="outline"
        app:layout_constraintLeft_toLeftOf="@id/name_input_et"
        app:layout_constraintRight_toRightOf="@id/name_input_et"
        app:layout_constraintTop_toBottomOf="@id/name_input_et">

        <EditText
            android:id="@+id/emailTxtfiled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/EnterYourEmail"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_input_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:boxBackgroundColor="@android:color/white"
        app:boxBackgroundMode="outline"
        app:layout_constraintLeft_toLeftOf="@id/email_input_et"
        app:layout_constraintRight_toRightOf="@id/email_input_et"
        app:layout_constraintTop_toBottomOf="@id/email_input_et"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/EnteryourPassword"
            android:inputType="textPassword"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/sign_up_btn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="16dp"
        android:text="@string/SignUp"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@id/password_input_et"
        app:layout_constraintRight_toRightOf="@id/password_input_et"
        app:layout_constraintTop_toBottomOf="@id/password_input_et" />

    <LinearLayout
        android:id="@+id/you_user_sign_up_li"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="@id/sign_up_btn"
        app:layout_constraintRight_toRightOf="@id/sign_up_btn"
        app:layout_constraintTop_toBottomOf="@id/sign_up_btn">

        <TextView
            android:id="@+id/you_user_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DoYouhaveAnAccout"
            android:textColor="@android:color/background_dark"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/sign_in_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingRight="5dp"
            android:text="@string/SignIn"
            android:textColor="@color/design_default_color_primary_dark"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>


    <ImageView
        android:id="@+id/twitterAuthSignUp"
        android:layout_width="56dp"
        android:layout_height="43dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="100dp"
        android:src="@drawable/twitter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/googleAuthSignUp"
        android:layout_width="50dp"
        android:layout_height="41dp"
        android:layout_marginStart="100dp"
        android:layout_marginBottom="100dp"
        android:src="@drawable/googlep"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/twitterAuthSignUp"
        app:layout_constraintStart_toEndOf="@+id/googleAuthSignUp">

        <com.facebook.login.widget.LoginButton
            android:id="@+id/facebook_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />


        <ImageView
            android:id="@+id/facebookAuthsignUp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:src="@drawable/facebook" />
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>