<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".home.Home.View.MainActivity">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="390dp"
            android:layout_height="229dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup">

            <ImageView
                android:id="@+id/imgformeal"
                android:layout_width="match_parent"
                android:layout_height="229dp"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/textforonemeal"
                android:layout_width="393dp"
                android:layout_height="90dp"
                android:layout_gravity="bottom|center_horizontal"
                android:background="#90000000"
                android:gravity="center"
                android:text="meal" />
        </androidx.cardview.widget.CardView>

        <SearchView
            android:id="@+id/searchView"
            android:layout_width="362dp"
            android:layout_height="46dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/rectangleround"
            android:iconifiedByDefault="false"
            android:queryHint="Search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.487"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="380dp"
            android:layout_height="72dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchView">

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="131dp"
                android:layout_height="72dp"
                android:text="@string/searchc" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="135dp"
                android:layout_height="match_parent"
                android:text="@string/searchbasedcat" />

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/searchbaseding" />

        </RadioGroup>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/catgoryrecy"
            android:layout_width="401dp"
            android:layout_height="248dp"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="11dp"
            tools:layout_editor_absoluteY="109dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>